@@ -1,5 +1,7 @@
 Changelog for Shake
 
+    IMPORTANT: Incompatible on disk format change
+    #83, support digest rules for files
     #83, add shakeChange parameter and --digest* args
     #83, add equivalentValue function to Rule typeclass
     Deprecate defaultRule
